# Web2.0-Fourth-Homework

./: Dockerfile  LICENSE  MANIFEST.in  pyproject.toml
HW4/: error.html  index.html  main.py  message.html
storage/: data.json
